[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Austin Witherspoon <contact@austinwitherspoon.com>"]
readme = "README.md"
packages = [{include = "python"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120